--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input type="submit" value="Entrar">
 
     </form>
-    <form action="cadastro.php" method="post">
+    <form action="cadastro.html" method="post">
 
         <input type="submit" value="CADASTRAR">
 
