--- a/cadastro.html
+++ b/cadastro.html
@@ -17,7 +17,7 @@ include 'conectar.php';
     <header>
 
         <button>
-            <a href="index.php">VOLTAR</a>
+            <a href="index.html">VOLTAR</a>
         </button>
 
     </header>
